--- a/src/angular-app/sfchecks/partials/questions-settings.html
+++ b/src/angular-app/sfchecks/partials/questions-settings.html
@@ -1,6 +1,3 @@
-<script src="/bower_components/angular/angular.min.js"></script>
-<script src="/bower_components/angularjs-file-upload/angular-file-upload.js"></script>
-
 <h2 style="font-weight:normal">Update {{textTitle}}</h2>
 <div ng-show="rights.editOther">
 <tabset>
@@ -15,6 +12,7 @@
 			<div class="drop-box" ng-file-drop="onFileSelect($files);">or drop files here</div>
 			<label></label>
 			<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
+			<div ng-bind-html="uploadresults">Upload results should replace this text</div>
 		</form>
 	</tab>
 </tabset>
