--- a/src/angular-app/sfchecks/partials/questions-settings.html
+++ b/src/angular-app/sfchecks/partials/questions-settings.html
@@ -10,9 +10,33 @@
 			<label>Upload an Audio File</label>
 			<input type="file" ng-file-select="onFileSelect($files)" >
 			<div class="drop-box" ng-file-drop="onFileSelect($files);">or drop files here</div>
+			<div ng-bind-html="uploadresults"></div>
+<!-- Commit functional code before changing this
+			choose a single file: <input type="file" ng-file-select="onFileSelect($files)">
+			<br/>
+			<br/>
+			<div class="drop-box" ng-file-drop="onFileSelect($files);" ng-file-drop-available="dropSupported=true">or drop files here</div>
+			<div ng-show="!dropSupported">HTML5 Drop File is not supported on this browser</div>
+			<br/>
+			<div ng-show="selectedFiles != null">
+				<div class="sel-file" ng-repeat="f in selectedFiles">
+					Progress:
+					<br/>
+					<span class="progress">						
+						<div style="width:{{progress[$index]}}%">{{progress[$index]}}%</div>
+					</span>
+					{{f.name}} - size: {{f.size}}B - type: {{f.type}}
+				</div>
+			</div>
+			<div class="response" ng-show="uploadResult.length > 0">
+				Server Response:
+				<ul>
+					<li ng-repeat="result in uploadResult" ng-bind-html="result">{{result}}</li>
+				</ul>
+			</div>
+-->			
 			<label></label>
 			<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
-			<div ng-bind-html="uploadresults">Upload results should replace this text</div>
 		</form>
 	</tab>
 </tabset>
