--- a/src/angular-app/common/css/palaso-ui.css
+++ b/src/angular-app/common/css/palaso-ui.css
@@ -132,3 +132,25 @@ form.new-tags i.icon-plus {
 	color: green;
 }
 
+/* Style for file upload */
+.drop-box {
+	width: 200px;
+	height: 50px;
+	border: 4px dashed lightblue;
+	border-radius: 15px;
+	background-color: white;
+	text-align: center;
+	padding-top: 30px;
+}
+
+/* Style for file upload */
+.progress {
+	width: 100px;
+	height: 50px;
+	border: 3px groove;
+}
+
+/* Style for file upload */
+.sel-file {
+
+}
