--- a/src/angular-app/sfchecks/partials/questions-settings.html
+++ b/src/angular-app/sfchecks/partials/questions-settings.html
@@ -13,22 +13,17 @@
 			<div class="drop-box" ng-file-drop="onFileSelect($files);" ng-file-drop-available="dropSupported=true">or drop files here</div>
 			<div ng-show="!dropSupported">HTML5 Drop File is not supported on this browser</div>
 			<br/>
-			<div ng-show="selectedFiles != null">
-				<div class="sel-file" ng-repeat="f in selectedFiles">
-					Progress:
-					<br/>
-					<span class="progress">						
-						<div style="width:{{progress[$index]}}%">{{progress[$index]}}%</div>
-					</span>
-					{{f.name}} - size: {{f.size}}B - type: {{f.type}}
-				</div>
+			<div ng-show="file != null">
+				Progress:
+				<br/>
+				<div class="span4"><progress percent="progress"></progress></div>&nbsp
+				{{file.name}} - size: {{file.size | bytes }} - type: {{file.type}}
 			</div>
-			<div class="response" ng-show="uploadResult.length > 0">
-				Server Response:
-				<ul>
-					<li ng-repeat="result in uploadResult" ng-bind-html="result">{{result}}</li>
-				</ul>
-			</div>
+			<label>&nbsp</label>
+			<div ng-bind-html="uploadResult"></div>
+<!-- 			<div class="response" ng-show="uploadResult.length > 0">
+				Server Response: {{uploadResult}}
+			</div>  -->
 			<label></label>
 			<br/>
 			<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
