--- a/src/angular-app/sfchecks/partials/questions-settings.html
+++ b/src/angular-app/sfchecks/partials/questions-settings.html
@@ -7,26 +7,30 @@
 			<input type="text" class="span4" ng-model="editedText.title" placeholder="Text Name"/>
 			<label>Text</label>
 			<textarea ng-model="editedText.content" class="span4" rows="4" placeholder="Paste the USX text here"></textarea>
-			<label>Upload an Audio File</label>
-			<input type="file" ng-file-select="onFileSelect($files)" >
-			<label></label>
-			<div class="drop-box" ng-file-drop="onFileSelect($files);" ng-file-drop-available="dropSupported=true">or drop files here</div>
-			<div ng-show="!dropSupported">HTML5 Drop File is not supported on this browser</div>
-			<br/>
-			<div ng-show="file != null">
-				Progress:
-				<br/>
-				<div class="span4"><progress percent="progress"></progress></div>&nbsp
-				{{file.name}} - size: {{file.size | bytes }} - type: {{file.type}}
-			</div>
-			<label>&nbsp</label>
-			<div ng-bind-html="uploadResult"></div>
-<!-- 			<div class="response" ng-show="uploadResult.length > 0">
-				Server Response: {{uploadResult}}
-			</div>  -->
 			<label></label>
 			<br/>
 			<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
+		</form>
+	</tab>
+	<tab heading="Audio File">
+		<form class="well " ng-submit="updateText(editedText)">
+			<label>Upload an Audio File</label>
+			<div class="drop-box" ng-file-drop="onFileSelect($files);" ng-file-drop-available="dropSupported=true">
+				<h4>Drop an MP3 file here</h4>
+				<br/>
+				<p>or if you prefer...</p>
+			    <input type="button" class="btn" value="Browse..." onclick="javascript:document.getElementById('audiofile').click();">
+			    <input id="audiofile" type="file" style="display:none;" ng-file-select="onFileSelect($files)">
+<!-- 			    <input type="file" ng-file-select="onFileSelect($files)">	 -->
+			</div>
+			<div ng-show="!dropSupported">HTML5 Drop File is not supported on this browser</div>
+			<br />
+			<div ng-show="file != null">
+				<p><strong>{{file.name}}</strong> {{file.size | bytes }}</p>
+				<div class="span4" margin-left="-50px"><progress percent="progress"></progress></div>&nbsp
+			</div>
+			<label>&nbsp</label>
+			<div ng-bind-html="uploadResult"></div>
 		</form>
 	</tab>
 </tabset>
