--- a/src/angular-app/common/css/palaso-ui.css
+++ b/src/angular-app/common/css/palaso-ui.css
@@ -134,10 +134,9 @@ form.new-tags i.icon-plus {
 
 /* Style for file upload */
 .drop-box {
-	width: 300px;
-	height: 160px;
-	border: 4px dashed lightblue;
-	border-radius: 15px;
+	width: 320px;
+	height: 170px;
+	border: 4px dashed #0088cc;
 	background-color: white;
 	text-align: center;
 	padding-top: 30px;
