Improve formatting for poetry in Bible texts
This is especially handy for the Psalms, since every text in Psalms
will have poetry styles (e.g., the "q1" and "q2" classes).


Former-commit-id: c219bcc783d7465946714ccb6f28060b4465fb49

--- a/src/css/sf.css
+++ b/src/css/sf.css
@@ -713,6 +713,19 @@ div#text {
 	max-height: 600px;
 }
 
+div#text p, div.scripture-quote p {
+	line-height: 1.2em;
+}
+
+div#text p.q1, div.scripture-quote p.q1 {
+	margin-bottom: 0em;
+}
+
+div#text p.q2, div.scripture-quote p.q2 {
+	margin-bottom: 0em;
+	margin-left: 1.5em;
+}
+
 div#answerControls {
 	position: relative;
 }
