--- a/src/angular-app/sfchecks/partials/questions-settings.html
+++ b/src/angular-app/sfchecks/partials/questions-settings.html
@@ -3,13 +3,26 @@
 <tabset>
 	<tab heading="Edit Text">
 		<form class="well " ng-submit="updateText(editedText)">
+			<fieldset class="span4">
 			<label>Title</label>
-			<input type="text" class="span4" ng-model="editedText.title" placeholder="Text Name"/>
+			<input type="text" ng-model="editedText.title" placeholder="Text Name"/>
 			<label>Text</label>
-			<textarea ng-model="editedText.content" class="span4" rows="4" placeholder="Paste the USX text here"></textarea>
+			<textarea ng-model="editedText.content" rows="4" placeholder="Paste the USX text here"></textarea>
 			<label></label>
 			<br/>
 			<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
+			</fieldset>
+			<fieldset class="span4">
+				<div class="drop-box" ng-file-drop="onUsxFile($files)" ng-file-drop-available="dropSupported=true">
+					<h4>Or drop a USX file here</h4>
+					<br/>
+					<p>or if you prefer...</p>
+					<input type="button" class="btn" value="Browse..." onclick="javascript:document.getElementById('usxfile').click();">
+					<input id="usxfile" type="file" style="display:none;" ng-file-select="onUsxFile($files)">
+				</div>
+				<div ng-show="!dropSupported">HTML5 Drop File is not supported on this browser</div>
+			</fieldset>
+			<div style="clear: left"></div>
 		</form>
 	</tab>
 	<tab heading="Audio File">
