Allow custom templates per project for all pages.

--- a/src/angular-app/sfchecks/partials/project-settings.html
+++ b/src/angular-app/sfchecks/partials/project-settings.html
@@ -31,7 +31,7 @@
 				<label>SMS Message</label>
 				<input required name="smsTemplate" type="text" placeholder="SMS Message" ng-model="message.smsTemplate"/>
 			</fieldset>
-			<button style="margin-top:10px" type="submit" class="btn"><i class="icon-ok"></i>Send Message Now</button>
+			<button type="submit" class="btn"><i class="icon-ok"></i>Send Message Now</button>
 			
 			</form>
 		</div>
@@ -65,7 +65,7 @@
 		<label><input type="checkbox" ng-model="project.featured"/> Featured On Website</label>
 		
 	</fieldset>
-	<button style="margin-top:10px" type="submit" class="btn"><i class="icon-ok"></i>Save</button>
+	<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
 	
 	</form>
 	</tab>
@@ -83,8 +83,8 @@
 		<label>Email Name</label>
 		<input type="text" placeholder="(From Name)" ng-model="settings.email.fromName"/>
 	</fieldset>
-	<button style="margin-top:10px" type="submit" class="btn"><i class="icon-ok"></i>Save</button>
-	<button disabled style="margin-top:10px" class="btn"><i class="icon-check"></i>Test Settings (NYI)</button>
+	<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
+	<button disabled class="btn"><i class="icon-check"></i>Test Settings (NYI)</button>
 	
 	</form>
 	</tab>
