--- a/src/css/jamaicanpsalms/sf-jamaica.css
+++ b/src/css/jamaicanpsalms/sf-jamaica.css
@@ -5,12 +5,27 @@
  * Date			17th October 2013
  * File Info	Homepage template CSS sheet to fit bootstrap 2 grid
  */
-  
+
+/* Non bootstrap resets */
+html, body {
+	height: 100%;
+}
+
+.right {
+	float: right;
+}
+
+.left {
+	float: left;
+}
+
+/* Scripture Forge */
+
 body { 
 	font-family: "Open Sans", Arial, Helvetica, Verdana, sans-serif;
 	font-weight: 400;
 	color: #404040;
-	background: url(../../images/jamaican_psalms/sf_j_body_bkg_tile.png) repeat 0 0;
+	background: url(../../images/jamaicanpsalms/sf_j_body_bkg_tile.png) repeat 0 0;
 }
 
 h2, h3 {
@@ -77,13 +92,13 @@ div.darkTextLogo {
 	width: 166px;
 	height: 14px;
 	margin-top: 14px;
-	background: transparent url(../../images/jamaican_psalms/sf_sprite_jamaica.png) no-repeat 0 -22px;
+	background: transparent url(../../images/jamaicanpsalms/sf_sprite_jamaica.png) no-repeat 0 -22px;
 }
 
 div#sf-promotion-outer-wrap {
 	width: 100%;
 	border-bottom: 8px solid #fff;
-	background: url(../../images/jamaican_psalms/sf_promo_bkg_jamaica.png) repeat-x 0 0;
+	background: url(../../images/jamaicanpsalms/sf_promo_bkg_jamaica.png) repeat-x 0 0;
 }
 
 div#sf-promotion-inner-wrap {
@@ -91,14 +106,14 @@ div#sf-promotion-inner-wrap {
 	max-width: 1280px;
 	min-width: 940px;
 	margin: 0 auto;
-	background: #333 url(../../images/jamaican_psalms/photo-2.jpg) no-repeat center 0;
+	background: #333 url(../../images/jamaicanpsalms/photo-2.jpg) no-repeat center 0;
 	overflow: hidden;
 }
 
 div#sf-promotion-wrap-shadow {
 	display: block;
 	height: 30px;
-	background: transparent url(../../images/jamaican_psalms/sf_sprite_jamaica.png) no-repeat center -74px;
+	background: transparent url(../../images/jamaicanpsalms/sf_sprite_jamaica.png) no-repeat center -74px;
 }
 
 div.promotionWing {
@@ -109,11 +124,11 @@ div.promotionWing {
 }
 
 div.promotionWingLeft {
-	background: url(../../images/jamaican_psalms/sf_promo_wings_left_jamaica.png) no-repeat 0 0;
+	background: url(../../images/jamaicanpsalms/sf_promo_wings_left_jamaica.png) no-repeat 0 0;
 }
 
 div.promotionWingRight {
-	background: url(../../images/jamaican_psalms/sf_promo_wings_right_jamaica.png) no-repeat 0 0;
+	background: url(../../images/jamaicanpsalms/sf_promo_wings_right_jamaica.png) no-repeat 0 0;
 }
 
 div#sf-promotion {
@@ -151,12 +166,12 @@ div.sf-3up-3 {
 div.sub-foot-detailing {
 	width: auto;
 	height: 7px;
-	background: url(../../images/jamaican_psalms/sf_j_sub-foot-detailing.png) repeat-x 0 0;
+	background: url(../../images/jamaicanpsalms/sf_j_sub-foot-detailing.png) repeat-x 0 0;
 }
 
 div#sub-foot {
 	padding: 20px 0;
-	background: url(../../images/jamaican_psalms/sf_j_dark_bkg_tile.png) repeat 0 0;
+	background: url(../../images/jamaicanpsalms/sf_j_dark_bkg_tile.png) repeat 0 0;
 }
 
 div#footer {
@@ -165,7 +180,7 @@ div#footer {
 	height: auto;
 	padding: 20px 0 24px 0;
 	background-color: #3a3a3a;
-	background: #3a3a3a url(../../images/jamaican_psalms/sf_sprite_jamaica.png) no-repeat center -139px;
+	background: #3a3a3a url(../../images/jamaicanpsalms/sf_sprite_jamaica.png) no-repeat center -139px;
 }
 
 div#footer small {
@@ -202,8 +217,8 @@ a {
 }
 
 a.arrowed {
-	background: url(../../images/jamaican_psalms/sf_sprite_jamaica.png) no-repeat top right;
-	*background: url(../../images/jamaican_psalms/sf_sprite_jamaica.gif) no-repeat top right;
+	background: url(../../images/jamaicanpsalms/sf_sprite_jamaica.png) no-repeat top right;
+	*background: url(../../images/jamaicanpsalms/sf_sprite_jamaica.gif) no-repeat top right;
 	padding-right: 12px;
 }
   
@@ -393,11 +408,15 @@ a:hover {
   border-color: #6DA251;
 }
 
+.content {
+	background: white;
+	padding: 0 20px 0 20px;
+}
 
 /* added from sf.css as referenced in template */
 #maincontainer {
 	min-height: 100%;
-	margin-bottom: -184px;
+	margin-bottom: -224px;
 	position: relative;
 	
 }
@@ -409,6 +428,308 @@ a:hover {
 }
 
 .clearfooter {
-	height: 239px;
+	height: 224px;
 	clear: both;
 }
+
+
+/* Application Styles */
+/* Header offset for logo */
+div.content h1 {
+	margin-left: 132px;
+	margin-top: 24px;
+	margin-bottom: 24px;
+}
+
+
+/* icons */
+button i, a i {
+	margin-right: 8px;
+}
+
+i.icon-remove {
+	color: #f66
+}
+
+/* Top navigation */
+div.hdrnav {
+	overflow: auto;
+	margin-left: 122px;
+	padding-top: 20px;
+}
+
+/*
+div.hdrnav ul {
+}
+*/
+div.hdrnav img {
+	margin-right: 12px;
+}
+
+ul.topNav > li {
+	background: #777777;
+	display: inline-block;
+	margin-top: 2px;
+	margin-right: 7px;
+}
+
+ul.topNav li:hover, div.hdrnav li.here {
+	background: #0088cc;
+}
+
+ul.topNav a {
+	color: #fff;
+	display: block;
+	padding: 6px 12px 6px 12px;
+	text-decoration: none;
+}
+
+div#logo-small {
+	width: 27px;
+	height: 36px;
+	background: url(../images/sf_logo_small.png) no-repeat;
+}
+
+
+
+/* Breadcrumbs */
+.breadcrumb > li .divider {
+	padding: 0 5px;
+	xcolor: #ccc;
+}
+
+ul.topCrumbs {
+	margin: 5px 0 0 0;
+	font-weight:bold;
+	color: gray;
+	padding: 0 0;
+	list-style: none;
+	background-color: #fff;
+	-webkit-border-radius: 0px;
+	-moz-border-radius: 0px;
+	border-radius: 0px;
+}
+
+ul.topCrumbs a {
+	color: gray;
+}
+
+ul.topCrumbs .active {
+	color: #202020;
+}
+
+/* jqte fixes and overrides */
+.jqte_placeholder {
+	display: block; 
+}
+
+.jqte {
+	margin: 20px 0;
+}
+
+.jqte_toolbar {
+	visibility: hidden;
+	height: 0px;
+}
+
+/* Question Page */
+table#answers tbody tr:hover, table tbody tr.altrow:hover {
+	background-color: #fff;
+}
+
+div#text {
+	overflow: auto;
+	min-height: 400px;
+	max-height: 600px;
+}
+
+div#text p, div.scripture-quote p {
+	line-height: 1.2em;
+}
+
+div#text p.q1, div.scripture-quote p.q1 {
+	margin-bottom: 0em;
+}
+
+div#text p.q2, div.scripture-quote p.q2 {
+	margin-bottom: 0em;
+	margin-left: 1.5em;
+}
+
+div#answerControls {
+	position: relative;
+}
+
+.overlay {
+	position: absolute;
+	z-index: 9999;
+}
+
+div#answerControls .overlay {
+	top: 20px;
+}
+
+div.overlay form {
+	margin-bottom: 0px;
+}
+
+.overlay-bg {
+	padding: 18px;
+	background-color: rgba(0, 0, 0, 0.80);
+	background: url(data:;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAABl0RVh0U29mdHdhcmUAUGFpbnQuTkVUIHYzLjUuNUmK/OAAAAATSURBVBhXY2RgYNgHxGAAYuwDAA78AjwwRoQYAAAAAElFTkSuQmCC)	repeat scroll transparent\9;
+	color: white;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+}
+
+
+
+div#comments {
+	width: 512px;
+	min-height: 400px;
+}
+
+div#comments table {
+	width: 100%;
+}
+
+div#comments table td {
+	border: 0;
+	padding: 0;
+	vertical-align: top;
+}
+
+div.scripture-quote {
+	background-color: #dddddd;
+	padding: 5px;
+	font-size: 90%;
+}
+
+div.vote {
+	text-align: center;
+	line-height: 1.0em;
+	margin-right: 16px;
+	margin-top: -8px;
+}
+
+div.vote a {
+	display: block;
+	font-size: 42px;
+	color: #999;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+div.vote a.disabled {
+	color: #eee;
+}
+
+div.vote span {
+	font-size: 24px;
+	font-weight: bold;
+	color: #999;
+}
+/*
+div.answer {
+	vertical-align: top;
+	margin: 12px 0 0 18px;
+}
+*/
+div.answer div.by {
+	background: #eee;
+	margin: 8px 0 0 0;
+	vertical-align: top;
+	width: 260px;
+}
+
+div.answer div.by img {
+	xdisplay: inline-block;
+	border: 2px solid white;
+	margin: 4px;
+	vertical-align: top;
+}
+
+div.answer div.by div {
+	display: inline-block;
+	margin: 6px 0 4px 4px;
+	vertical-align: middle;
+	line-height: 1.2em;
+	color: #666;
+}
+
+div#comments table.comments textarea {
+	width: 95%;
+}
+
+div#comments table.comments td {
+	border-top: 1px solid #eee;
+	border-bottom: 1px solid #eee;
+}
+
+/* New Item under ribbon bar */
+div.new-item {
+	margin: 20px 0 20px 0;
+}
+
+.activity-date {
+	font-size:12px;
+}
+
+.activity-icon {
+	text-align:center;
+}
+
+.activity-content i.icon-quote-left {
+	font-size: 12px;
+	margin-left:5px;
+	position:relative;
+	top: -5px;
+}
+
+ .activity-content i.icon-quote-right {
+	font-size: 12px;
+	position:relative;
+	margin-right: 5px;
+	top: -5px;
+}
+
+.activity-content p {
+	margin-top:10px;
+}
+
+.activity-content hr {
+	margin: 5px 0 5px 0;
+}
+
+.activity-content .indented {
+	margin-left:20px;
+}
+
+
+/* Table / Grid styles */
+table select {
+	margin-bottom: 0px;
+}
+
+label {
+	cursor: default;
+}
+
+.nav-tabs li {
+	cursor: pointer;
+}
+
+.unread {
+	background-color: #E1F2E1;
+	margin-top:10px;
+	padding: 5px;
+	border: #C1DBC1 2px solid;
+}
+
+.termsofservice li {
+	font-size: 0.9em;
+	line-height: 1.4em;
+}
+
+
