--- a/src/views/email/en/SignupWithProjectValidate.html
+++ b/src/views/email/en/SignupWithProjectValidate.html
@@ -4,7 +4,7 @@ Thanks for joining the {{project}} on ScriptureForge.  In a bid to reduce spam, 
 
 {{link}}
 
-This link will be valid for 1 day only.
+This link will be valid for 1 week only.
 
 Regards,
 The ScriptureForge Team
