--- a/src/views/email/en/SignupValidate.html
+++ b/src/views/email/en/SignupValidate.html
@@ -1,6 +1,8 @@
-Hi {{user.name}},
+Hi,
 
-Thanks for joining ScriptureForge.  In a bid to reduce spam, we need you to activate your account.  You can do this by clicking on the following link:
+{{user.name}} invites you to join the {{project.name}} project. 
+
+You're almost ready to start.  Just click the link below to complete your signup and then you will be ready to login.
 
 {{link}}
 
