invitefriend: now working.
Former-commit-id: a8d9de49f470bbe75766f7f5f29acec8fc1bfc78

--- a/src/css/jamaicanpsalms/sf-jamaica.css
+++ b/src/css/jamaicanpsalms/sf-jamaica.css
@@ -467,6 +467,10 @@ div.hdrnav img {
 	margin-right: 12px;
 }
 
+ul.topNav {
+	margin: 0;
+}
+
 ul.topNav > li {
 	background: #777777;
 	display: inline-block;
@@ -490,8 +494,6 @@ div#logo-small {
 	height: 36px;
 	background: url(../images/sf_logo_small.png) no-repeat;
 }
-
-
 
 /* Breadcrumbs */
 .breadcrumb > li .divider {
