--- a/src/views/email/en/SignupValidate.html
+++ b/src/views/email/en/SignupValidate.html
@@ -1,8 +1,6 @@
-Hi,
+Hi {{user.name}},
 
-{{user.name}} invites you to join the {{project.name}} project. 
-
-You're almost ready to start.  Just click the link below to complete your signup and then you will be ready to login.
+Thanks for joining ScriptureForge.  In a bid to reduce spam, we need you to activate your account.  You can do this by clicking on the following link:
 
 {{link}}
 
