Remove links that don't go anywhere on project and questions pages.

--- a/src/angular-app/sfchecks/partials/project.html
+++ b/src/angular-app/sfchecks/partials/project.html
@@ -44,7 +44,7 @@
 				<span class="larger-text">{{text.title}}</span>
 			</a>
 		</li>
-		<li><a href="#">{{getResponses(text)}} responses</a></li>
+		<li>{{getResponses(text)}} responses</li>
 	</ul>
 	<hr />
 </div>
