--- a/src/angular-app/sfchecks/partials/questions.html
+++ b/src/angular-app/sfchecks/partials/questions.html
@@ -38,7 +38,7 @@
 				<span class="larger-text">{{question.title}}</span>
 			</a>
 		</li>
-		<li><a href="#">{{getResponses(question)}} responses</a></li>
+		<li>{{getResponses(question)}} responses</li>
 	</ul>
 	<hr />
 </div>
