--- a/src/views/email/en/InvitationValidate.html
+++ b/src/views/email/en/InvitationValidate.html
@@ -1,6 +1,6 @@
 Hi,
 
-{{user.name}} invites you to join the {{project.name}} project. 
+{{user.name}} invites you to join the {{project.projectname}} project. 
 
 You're almost ready to start.  Just click the link below to complete your signup and then you will be ready to login.
 
