--- a/src/angular-app/sfchecks/partials/questions-settings.html
+++ b/src/angular-app/sfchecks/partials/questions-settings.html
@@ -8,24 +8,24 @@
 					<tr>
 						<td colspan="2">
 							<label>Title</label>
-							<input ng-model="title" type="text" placeholder="Title"/>
+							<input ng-model="editedText.title" type="text" placeholder="Title"/>
 						</td>
 					</tr>
 					<tr>
 						<td colspan="2">
 							<label>USX Text</label>
-							<textarea textdrop ng-model="content" rows="4" placeholder="Paste the USX text here"></textarea>
+							<textarea textdrop ng-model="editedText.content" rows="4" placeholder="Paste the USX text here"></textarea>
 						</td>
 					</tr>
 					<tr>
 						<td>From</td>
-						<td><input type="number" ng-model="startCh" placeholder="Chapter" style="width: 5em"></input>&nbsp;:&nbsp;<input type="number" ng-model="startVs" placeholder="Verse" style="width: 5em"></input></td>
-						<td><a ng-click="startCh = ''; startVs = ''" class="btn-link">reset</a></td>
+						<td><input type="number" ng-model="editedText.startCh" placeholder="Chapter" style="width: 5em"></input>&nbsp;:&nbsp;<input type="number" ng-model="editedText.startVs" placeholder="Verse" style="width: 5em"></input></td>
+						<td><a ng-click="editedText.startCh = ''; editedText.startVs = ''" class="btn-link">reset</a></td>
 					</tr>
 					<tr>
 						<td>To</td>
-						<td><input type="number" ng-model="endCh" placeholder="Chapter" style="width: 5em"></input>&nbsp;:&nbsp;<input type="number" ng-model="endVs" placeholder="Verse" style="width: 5em"></input></td>
-						<td><a ng-click="endCh = ''; endVs = ''" class="btn-link">reset</a></td>
+						<td><input type="number" ng-model="editedText.endCh" placeholder="Chapter" style="width: 5em"></input>&nbsp;:&nbsp;<input type="number" ng-model="editedText.endVs" placeholder="Verse" style="width: 5em"></input></td>
+						<td><a ng-click="editedText.endCh = ''; editedText.endVs = ''" class="btn-link">reset</a></td>
 					</tr>
 				</table>
 				<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
