--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -1,5 +1,9 @@
 <div class="span5">
-    <h2>{{text.title}} <span ng-show="mp3link"><a class="right" href="{{mp3link}}"><i class="icon-download" tooltip="Download audio"></i></a> <a class="right" m3ulink filename="{{mp3link}}"><i class="icon-volume-up" tooltip="Play audio"></i></a></span></h2>
+	<div class="pull-right" ng-show="text.audioUrl && audioReady">
+		<a ng-click="playAudio()"><i class="icon-volume-up" tooltip="Play audio"></i></a>
+		<a href="{{mp3link}}"><i class="icon-download" tooltip="Download audio"></i></a>
+	</div>
+	<h2>{{text.title}}</h2>
 <div id="text" sil-selection sil-selected-text="selectedText" content="text.content">
 </div>
 </div>
