Fix #78: Audio streaming and downloading.
* Integrated soundmanager2 and soundmanager2-ng for stream.
* Created a mime octet/stream controller to facilitate the download.

--- a/src/css/jamaicanpsalms/sf-jamaica.css
+++ b/src/css/jamaicanpsalms/sf-jamaica.css
@@ -536,6 +536,10 @@ ul.topCrumbs .active {
 }
 
 /* Question Page */
+h2 a:hover {
+	text-decoration: none;
+}
+
 table#answers tbody tr:hover, table tbody tr.altrow:hover {
 	background-color: #fff;
 }
