--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -1,8 +1,8 @@
 <div class="span5">
-	<div class="pull-right" ng-show="text.audioUrl && audioReady">
-		<a ng-click="playAudio()"><i class="icon-volume-up" tooltip="Play audio"></i></a>
-		<a href="{{mp3link}}"><i class="icon-download" tooltip="Download audio"></i></a>
-	</div>
+	<h2 class="pull-right" ng-show="true || (text.audioUrl && audioReady)">
+		<a sgw-sound-player state="state" href="text.audioUrl"><i ng-class="$parent.$parent.audioIcon()" tooltip="Play audio"></i></a>
+		<a ng-href="{{audioDownloadUrl}}"><i class="icon-download" tooltip="Download audio"></i></a>
+	</h2>
 	<h2>{{text.title}}</h2>
 <div id="text" sil-selection sil-selected-text="selectedText" content="text.content">
 </div>
