Hide audio controls when audio is not available.

--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -1,5 +1,5 @@
 <div class="span5">
-	<h2 class="pull-right" ng-show="true || (text.audioUrl && audioReady)">
+	<h2 class="pull-right" ng-show="text.audioUrl && audioReady">
 		<a sgw-sound-player state="state" href="text.audioUrl"><i ng-class="$parent.$parent.audioIcon()" tooltip="Play audio"></i></a>
 		<a ng-href="{{audioDownloadUrl}}"><i class="icon-download" tooltip="Download audio"></i></a>
 	</h2>
