fix #90 Changed various form UIs to prohibit empty form submissions
Added required html attribute to some form elements or used ng-disabled for other cases

--- a/src/angular-app/sfchecks/partials/project-settings.html
+++ b/src/angular-app/sfchecks/partials/project-settings.html
@@ -18,7 +18,7 @@
 					</li>
 				</ul>
 			</typeahead>
-			<button ng-model="addMode" class="btn" ng-click="addProjectUser()"><i ng-class="addModeIcon(addMode)"></i>{{addModeText(addMode)}}</button>
+			<button ng-model="addMode" class="btn" ng-disabled="!typeahead.userName" ng-click="addProjectUser()"><i ng-class="addModeIcon(addMode)"></i>{{addModeText(addMode)}}</button>
 			</form>
 		</div>
 		<div collapse="newMessageCollapsed">
