--- a/src/angular-app/sfchecks/partials/questions-settings.html
+++ b/src/angular-app/sfchecks/partials/questions-settings.html
@@ -8,7 +8,7 @@
 					<tr>
 						<td colspan="2">
 							<label>Title</label>
-							<input ng-model="editedText.title" type="text" placeholder="Title"/>
+							<input required ng-model="editedText.title" type="text" placeholder="Title"/>
 						</td>
 					</tr>
 					<tr>
