--- a/src/angular-app/sfchecks/partials/question.html
+++ b/src/angular-app/sfchecks/partials/question.html
@@ -39,7 +39,7 @@
 		Add your own answer<span ng-show="newAnswer.textHighlight"> about this part of the text</span>:
 		<div ng-show="newAnswer.textHighlight" ng-bind-html="newAnswer.textHighlight" class="scripture-quote"></div>
 			<form ng-submit="submitAnswer()">
-				<textarea ng-model="newAnswer.content" pui-jqte="jqteOptions"></textarea>
+				<textarea required ng-model="newAnswer.content" pui-jqte="jqteOptions"></textarea>
 				<div ng-hide="unreadResponseCount() == 0" class="right badge badge-important">{{unreadResponseCount()}} new response<span ng-show="unreadResponseCount() > 1">s</span></div>
 				<button type="submit" class="btn">Done</button>
 			</form>
@@ -84,7 +84,7 @@
 					<a ng-show="rightsDeleteResponse(answer.userRef.userid) && !questionIsClosed()" ng-click="answerDelete(answerId)" class="btn-link">delete</a>
 					<ng-switch on="answerEditorVisible(answerId)">
 					<form ng-submit="editAnswer(editedAnswer)" ng-switch-when="true">
-						<textarea ng-model="editedAnswer.content" pui-jqte="jqteOptions"></textarea>
+						<textarea required ng-model="editedAnswer.content" pui-jqte="jqteOptions"></textarea>
 						<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
 						<a class="btn-link" ng-click="hideAnswerEditor()">Cancel</a>
 					</form>
@@ -100,7 +100,7 @@
 						<a ng-show="rightsDeleteResponse(comment.userRef.userid) && !questionIsClosed()" ng-click="commentDelete(answer, comment.id)" class="btn-link">delete</a>
 						<ng-switch on="commentEditorVisible(comment.id)">
 						<form ng-submit="editComment(answerId, answer, editedComment)" ng-switch-when="true">
-							<textarea ng-model="editedComment.content"></textarea>
+							<textarea required ng-model="editedComment.content"></textarea>
 							<button type="submit" class="btn">Save</button>
 							<a class="btn-link" ng-click="hideCommentEditor()">Cancel</a>
 						</form>
@@ -114,7 +114,7 @@
 							<a ng-click="collapsed = !collapsed" class="btn btn-link">add comment</a>
 							<div collapse="!collapsed">
 							<form ng-submit="submitComment(answerId, answer); collapsed = !collapsed;">
-								<textarea ng-model="newComment.content"></textarea><br/>
+								<textarea required ng-model="newComment.content"></textarea><br/>
 								<button type="submit" class="btn btn-small">Add Comment</button>
 							</form>
 							</div>
