--- a/src/angular-app/sfchecks/partials/projects.html
+++ b/src/angular-app/sfchecks/partials/projects.html
@@ -5,7 +5,7 @@
 </form>
 <div class="new-item" collapse="newProjectCollapsed">
 	<form class="well form-inline" name="newProjectForm">
-	<input type="text" ng-model="projectName" required placeholder="Project Name"/>
+	<input type="text" ng-model="projectName" maxlength="50" required placeholder="Project Name"/>
 	<button type="submit" class="btn" ng-disabled="newProjectForm.$invalid" ng-click="addProject(); newProjectCollapsed = true"><i class="icon-ok"></i>Save</button>
 	</form>
 </div>
