--- a/src/angular-app/sfchecks/partials/projectSettings.html
+++ b/src/angular-app/sfchecks/partials/projectSettings.html
@@ -1,6 +1,7 @@
 <h2 style="font-weight:normal">{{project.name}} Details</h2>
 <tabset>
 	<tab heading="Users">
+		<div ng-controller="ProjectSettingsUsersCtrl">
 		<form ng-show="rights.showControlBar" class="control-bar form-inline">
 			<button ng-disabled="selected.length == 0" ng-show="rights.deleteOther" class="btn" ng-click="removeProjectUsers()"><i class="icon-remove"></i>Remove Members</button>
 			<button ng-show="rights.create" class="btn" ng-click="newUserCollapsed = !newUserCollapsed"><i class="icon-plus"></i>Add Members</button>
@@ -56,8 +57,10 @@
 			</tbody>
 		</table>		
 		</div>
+		</div>
 	</tab>
 	<tab heading="Project Properties">
+		<div ng-controller="ProjectSettingsPropertiesCtrl">
 		<form class="well" ng-submit="updateProject()">
 		<fieldset>
 			<label>Project Name</label>
@@ -68,8 +71,10 @@
 		</fieldset>
 		<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
 		</form>
+		</div>
 	</tab>
 	<tab heading="Project Setup">
+		<div ng-controller="ProjectSettingsPropertiesCtrl">
 		<form class="well" ng-submit="updateProject()">
 		<div class="row">
 		<div class="span4" style="border:1px solid blue;">
@@ -84,23 +89,26 @@
 		</div>
 		<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
 		</form>
+		</div>
 	</tab>
 	<tab select="readCommunicationSettings()" ng-show="$parent.canEditCommunicationSettings()" heading="Communication Settings">
-	<form class="well" ng-submit="updateCommunicationSettings()">
-	<fieldset>
-		<label>Twilio Account Username</label>
-		<input type="text" placeholder="(Twilio SID)" ng-model="settings.sms.accountId"/>
-		<label>Twillio Auth Token</label>
-		<input type="text" placeholder="(Twilio Auth Token)" ng-model="settings.sms.authToken"/>
-		<label>SMS From Number</label>
-		<input type="text" placeholder="(From Number)" ng-model="settings.sms.fromNumber"/>
-		<label>Email From (reply-to) Address</label>
-		<input type="email" placeholder="(From Email)" ng-model="settings.email.fromAddress"/>
-		<label>Email Name</label>
-		<input type="text" placeholder="(From Name)" ng-model="settings.email.fromName"/>
-	</fieldset>
-	<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
-	
-	</form>
+		<div ng-controller="ProjectSettingsCommunicationCtrl">
+		<form class="well" ng-submit="updateCommunicationSettings()">
+		<fieldset>
+			<label>Twilio Account Username</label>
+			<input type="text" placeholder="(Twilio SID)" ng-model="settings.sms.accountId"/>
+			<label>Twillio Auth Token</label>
+			<input type="text" placeholder="(Twilio Auth Token)" ng-model="settings.sms.authToken"/>
+			<label>SMS From Number</label>
+			<input type="text" placeholder="(From Number)" ng-model="settings.sms.fromNumber"/>
+			<label>Email From (reply-to) Address</label>
+			<input type="email" placeholder="(From Email)" ng-model="settings.email.fromAddress"/>
+			<label>Email Name</label>
+			<input type="text" placeholder="(From Name)" ng-model="settings.email.fromName"/>
+		</fieldset>
+		<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
+		
+		</form>
+		</div>
 	</tab>
 </tabset>
